trying to fix image distortion

--- a/css/fccstyles.css
+++ b/css/fccstyles.css
@@ -67,7 +67,6 @@ h1 {
 #Juke img {
 	border: none;
 	border-radius: 100%;
-	height: 50%;
 	width: 50%;
 }
 
